[package]
name = "domain-driven-design-introduction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
dotenvy = "0.15.7"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
async-trait = "0.1.75"
